<?xml version="1.0"?>
<package>
  <name>thormang3_common</name>
  <version>0.1.0</version>
  <description>ROS packages for the thormang3_common (meta package)</description>
  <license>BSD</license>
  <author email="sch@robotis.com">sch</author>
  <maintainer email="pyo@robotis.com">pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-Common/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-Common</url>
  <url type="website">http://wiki.ros.org/thormang3_common</url>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>thormang3_description</run_depend>
  <run_depend>thormang3_gazebo</run_depend>
  <export><metapackage/></export>
</package>
