<?xml version="1.0"?>
<package>
  <name>thormang3_common</name>
  <version>0.1.1</version>
  <description>ROS packages for the thormang3_common (meta package)</description>
  <license>BSD</license>
  <author email="sch@robotis.com">sch</author>
  <maintainer email="pyo@robotis.com">pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-Common/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-Common</url>
  <url type="website">http://wiki.ros.org/thormang3_common</url>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>thormang3_action_module_msgs</run_depend>
  <run_depend>thormang3_feet_ft_module_msgs</run_depend>
  <run_depend>thormang3_gripper_module_msgs</run_depend>
  <run_depend>thormang3_manipulation_module_msgs</run_depend>
  <run_depend>thormang3_offset_tuner_msgs</run_depend>
  <run_depend>thormang3_walking_module_msgs</run_depend>
  <run_depend>thormang3_wholebody_module_msgs</run_depend>
  <export><metapackage/></export>
</package>
