<?xml version="1.0"?>
<package>
  <name>thormang3_description</name>
  <version>0.1.1</version>
  <description>The thormang3_description package</description>
  <license>BSD</license>
  <author email="sch@robotis.com">sch</author>
  <maintainer email="pyo@robotis.com">pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-Common/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-Common</url>
  <url type="website">http://wiki.ros.org/thormang3_description</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
