<?xml version="1.0"?>
<package format="2">
  <name>thormang3_description</name>
  <version>0.2.0</version>
  <description>
    3D models of the Thormang3 for simulation and visualization
  </description>
  <license>Apache 2.0</license>
  <author email="sch@robotis.com">SCH</author>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/thormang3_description</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/thormang3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-Common</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-Common/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urg_node</exec_depend>
  <exec_depend>rviz</exec_depend>
</package>
