<?xml version="1.0"?>
<package>
  <name>thormang3_gazebo</name>
  <version>0.0.0</version>
  <description>The thormang3_gazebo package</description>

  <maintainer email="sch@robotis.com">sch</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
