<?xml version="1.0"?>
<package format="2">
  <name>thormang3_gazebo</name>
  <version>0.2.0</version>
  <description>
    This package provides basic message pub and launch file to use Thormang3 on Gazebo
  </description>
  <license>Apache 2.0</license>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/thormang3_gazebo</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/thormang3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-Common</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-Common/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
</package>
